# cpp-lab-five

./: .gitignore  Book.cpp  Book.h  BookFinder.cpp  BookFinder.h  BookSorter.cpp  BookSorter.h  CMakeLists.txt  TaskFive.cpp  TaskOne.cpp  TaskThreeAndFour.cpp  TaskTwo.cpp  Templates.h  main.cpp
TaskSix/Header Files/: Deck.h  Game.h  Hand.h
TaskSix/Source Files/: Deck.cpp  Game.cpp  Hand.cpp  TaskSix.cpp
